test/gpu/native/assertOnFailToGpuize.1.good
warning: The prototype GPU support implies --no-checks. This may impact debuggability. To suppress this warning, compile with --no-checks explicitly
assertOnFailToGpuize.chpl:23: error: Loop containing assertOnGpu() is not Gpuizable
assertOnFailToGpuize.chpl:6: note: function is recursive
